# rust-book1-learn

./: .gitignore  Cargo.toml  README.md  README_ORG.md  rust-toolchain.toml
chapter10/: Cargo.toml
chapter10/src/: main.rs
chapter10/templates/: hello.html
chapter11/: Cargo.toml
chapter11/src/: main.rs
chapter11/templates/: todo.html
chapter12/: README.md
chapter12/simple-parallel-add/: Cargo.toml
chapter12/thumbnailer-channel/: Cargo.toml
chapter12/thumbnailer-channel/src/: main.rs
chapter12/thumbnailer-parallel-thumbnail/: Cargo.toml
chapter12/thumbnailer-parallel-thumbnail/src/: main.rs
chapter12/thumbnailer-rayon/: Cargo.toml
chapter12/thumbnailer-rayon/src/: main.rs
chapter12/thumbnailer-sync/: Cargo.toml
chapter12/thumbnailer-sync/src/: main.rs
chapter13/: README.md
chapter13/merge-array/: Cargo.toml
chapter13/merge-array/src/: main.rs
chapter13/parenthesis/: Cargo.toml
chapter13/parenthesis/src/: main.rs
chapter2/: README.md
chapter3/src/: main.rs
chapter4/: Cargo.toml
chapter4/src/: main.rs
chapter5/: README.md
chapter5/calculator-5-2/: Cargo.toml
chapter5/calculator-5-2/src/: main.rs
chapter5/calculator-5-3/: Cargo.toml
chapter5/calculator-5-3/src/: main.rs
chapter5/calculator-5-4/: Cargo.toml
chapter5/calculator-5-4/src/: main.rs
chapter5/calculator-5-5/: Cargo.toml
chapter6/: Cargo.toml
chapter6/src/: main.rs
chapter7/: README.md
chapter7/use_remote_crate/: Cargo.toml
chapter8/: Cargo.toml
chapter8/src/: main.rs
chapter9/: Cargo.toml
chapter9/src/: main.rs
(+2 files in other folders)
